--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+        <style>
+            a{
+                text-decoration: none;
+                color: black;
+            }
+            img{
+                width: 500px;
+                height: 300px;
+            }
+        </style>
 </head>
 
 <body class="w-100">
